force-app/zurich-sdm-app/main/default/objects/SDMCommercialPlan__mdt/SDMCommercialPlan__mdt.object-meta.xml
<CustomObject>
    <description>SDM: Configuracion para la relacion de Indicadores de objeto KPI con el calculo del Plan Comercial</description>
    <label>SDMCommercialPlan</label>
    <pluralLabel>SDMCommercialPlans</pluralLabel>
</CustomObject>