force-app/zurich-sdm-app/main/default/objects/SDMCommercialPlan__mdt/fields/CalculatedPreviousPeriod__c.field-meta.xml
<CustomField>
    <fullName>CalculatedPreviousPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica si es necesario realizar el cálculo para el periodo anterior del KPI.</description>
    <label>CalculatedPreviousPeriod</label>
    <type>Checkbox</type>
</CustomField>