force-app/zurich-sdm-app/main/default/objects/SDMCommercialPlan__mdt/fields/CalculationType__c.field-meta.xml
<CustomField>
    <fullName>CalculationType__c</fullName>
    <description>Define la operación que se va a realizar a la hora de calcular el KPI real</description>
    <label>CalculationType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sum</fullName>
                <default>true</default>
                <label>Sum</label>
            </value>
            <value>
                <fullName>Ratio</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>ComplexRatio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>