force-app/zurich-sdm-app/main/default/objects/SDMCommercialPlan__mdt/fields/FirstField__c.field-meta.xml
<CustomField>
    <fullName>FirstField__c</fullName>
    <description>El primer campo que se va a usar para el cálculo del KPI</description>
    <label>FirstField</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>