force-app/zurich-sdm-app/main/default/objects/SDMCommercialPlan__mdt/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <description>SDM: Valor de picklist del campo Indicator__c del objeto plan comercial</description>
    <label>Indicator</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>