force-app/zurich-sdm-app/main/default/objects/SDMCommercialPlan__mdt/fields/SecondField__c.field-meta.xml
<CustomField>
    <fullName>SecondField__c</fullName>
    <description>El segundo campo que se va a usar para el cálculo del KPI</description>
    <label>SecondField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>