force-app/zurich-sdm-app/main/default/objects/SDMCommercialPlan__mdt/fields/ThirdField__c.field-meta.xml
<CustomField>
    <fullName>ThirdField__c</fullName>
    <label>ThirdField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>